tests/NormalTests/paczka1/small_fuzzy/53414957.err
Error in line 5: NRhUOOscQ S769 38,9
Error in line 13: usE43b0wK S535 42,3
